# SBC23G09

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
components/esp_ez_provisioning/: CMakeLists.txt  esp_ez_provisioning.c  esp_ez_provisioning.h  update_page.py  web_page.h
components/esp_ez_provisioning/web_resources/: html_to_c_string.py
components/esp_ez_provisioning/web_resources/wifi_portal/: wifi_portal.css  wifi_portal.html
components/pump_driver/: CMakeLists.txt  pump_driver.c
components/pump_driver/include/: pump_driver.h
components/xkcy25_driver/: CMakeLists.txt  xkcy25.c
components/xkcy25_driver/include/: xkcy25.h
main/: config.h  h1.h  idf_component.yml  main.cpp
